# OSI_lab1_code

./: CMakeLists.txt  binary_search.cpp  combined_loader.cpp  hello.txt  main.cpp  multi_tester.bat  test.txt  thread_loader.bat
benches/: binary_search.cpp  combined_loader.cpp  multi_tester.bat  substring_modified.cpp  thread_loader.bat
other/: substring_search.cpp
